<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background">

    <!-- RecyclerView that is responsible for holding ticket list data -->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerViewTickets"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        android:paddingBottom="80dp"/>

</FrameLayout>