<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/user_name_menu"
        android:title="@string/my_requests"
        app:showAsAction="never"/>
    <item
        android:id="@+id/all_tickets_menu"
        android:title="@string/ticket_list"
        app:showAsAction="never"/>
    <item
        android:id="@+id/sign_out_menu"
        android:title="@string/sign_out"
        app:showAsAction="never"/>
</menu>