...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <!-- TextView that displays the title -->
                <TextView
                    android:id="@+id/ticketTitle"
                    style="@style/TextAppearance.AppCompat.Medium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/primary_text_light"
                    android:maxLines="1"
                    tools:text="Title"
...
